# Zbot3

./: .gitignore  HACKING.md  LICENSE  sources.txt  stack.yaml  zbot.cabal
.circleci/: config.yml
Cli/: zbot-cli.cabal
Cli/Zbot/: Cli.hs
Core/: zbot-core.cabal
Core/Zbot/Core/: Bot.hs  Irc.hs  Service.hs
Core/Zbot/Core/Bot/: Mock.hs  Networked.hs
Core/Zbot/Core/Irc/: Engine.hs  Protocol.hs  Types.hs
Core/Zbot/Core/Service/: IO.hs  Types.hs
Example/: Main.hs  zbot-example.cabal
Extras/: zbot-extras.cabal
Extras/Zbot/Extras/: Command.hs  Message.hs  Regex.hs  Scrape.hs  Time.hs  UnitService.hs
Services/: sources.txt
Services/Define/: zbot-service-define.cabal
Services/Define/Zbot/Service/: Define.hs
Services/Describe/: zbot-service-describe.cabal
Services/Describe/Zbot/Service/: Describe.hs
Services/Describe/Zbot/Service/Describe/: Default.hs  Onion.hs  Spotify.hs  Twitter.hs  YouTube.hs
Services/Grep/: zbot-service-grep.cabal
Services/Grep/Zbot/Service/: Grep.hs
Services/History/: zbot-service-history.cabal
Services/History/Zbot/Service/: History.hs
Services/History/Zbot/Service/History/: Entry.hs  Log.hs
Services/Lists/: zbot-service-lists.cabal
Services/Lists/Zbot/Service/: Lists.hs
Services/NGram/: zbot-service-ngram.cabal
Services/NGram/Zbot/Service/: NGram.hs
Services/NGram/Zbot/Service/NGram/: Model.hs
Services/Op/: zbot-service-op.cabal
Services/Op/Zbot/Service/: Op.hs
Services/Replace/: zbot-service-replace.cabal
Services/Replace/Zbot/Service/: Replace.hs
Services/Reputation/: zbot-service-reputation.cabal
Services/Roll/: zbot-service-roll.cabal
Services/Roll/Zbot/Service/: Roll.hs
Services/Seen/: zbot-service-seen.cabal
Services/Seen/Zbot/Service/: Seen.hs
Services/Uptime/: zbot-service-uptime.cabal
Services/Uptime/Zbot/Service/: Uptime.hs
src/Zbot/: Cli.hs  Metrics.hs
src/Zbot/Core/: Bot.hs  Irc.hs  Service.hs
src/Zbot/Core/Bot/: Mock.hs  Networked.hs  Types.hs
src/Zbot/Core/Irc/: Engine.hs  Protocol.hs  Types.hs
src/Zbot/Core/Service/: IO.hs  Types.hs
src/Zbot/Extras/: Color.hs  Command.hs  Message.hs  Regex.hs  Scrape.hs  Serialize.hs  UnitService.hs
src/Zbot/Service/: Define.hs  Describe.hs  Dude.hs  GitHub.hs  Goblin.hs  Grep.hs  Help.hs  History.hs  Invite.hs  Lists.hs  Morse.hs  NGram.hs  Op.hs  Remind.hs  Replace.hs  Reputation.hs  Roll.hs  Scrollback.hs  Seen.hs  Summary.hs  Typo.hs  Uptime.hs  Version.hs
src/Zbot/Service/Describe/: Default.hs  Onion.hs  Spotify.hs  Twitter.hs  YouTube.hs
src/Zbot/Service/History/: Entry.hs  Log.hs
src/Zbot/Service/NGram/: Model.hs
test/: Main.hs
test/Zbot/: TestCase.hs
test/Zbot/Tests/: Describe.hs  Dude.hs  Grep.hs  Help.hs  Onion.hs  Replace.hs  Reply.hs  Reputation.hs  Roll.hs  Typo.hs  YouTube.hs
zbot/: Main.hs
