name:            zbot-core
version:         3.0
license:         MIT
license-file:    ../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        An IRC Bot
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            attoparsec                >= 0.12
        ,   base                      >= 4.3      && < 5
        ,   bytestring                >= 0.10
        ,   containers                >= 0.5
        ,   mtl                       >= 2.1
        ,   network                   >= 2.4
        ,   text                      >= 1.2
        ,   transformers              >= 0.3

    exposed-modules:
            Zbot.Core.Bot
        ,   Zbot.Core.Bot.Mock
        ,   Zbot.Core.Irc
        ,   Zbot.Core.Service

    other-modules:
            Zbot.Core.Bot.Networked
        ,   Zbot.Core.Bot.Types
        ,   Zbot.Core.Irc.Engine
        ,   Zbot.Core.Irc.Protocol
        ,   Zbot.Core.Irc.Types
        ,   Zbot.Core.Service.IO
        ,   Zbot.Core.Service.Types

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
