name:            zbot-example
version:         3.0
license:         MIT
license-file:    ../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        A dice rolling service for Zbot.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

Executable zbot3
    Main-Is:        Main.hs

    build-depends:
            base                      >= 4.3      && < 5
        ,   zbot-core                 == 3.0
        ,   zbot-cli                  == 3.0
        ,   zbot-service-define       == 3.0
        ,   zbot-service-describe     == 3.0
        ,   zbot-service-grep         == 3.0
        ,   zbot-service-history      == 3.0
        ,   zbot-service-op           == 3.0
        ,   zbot-service-replace      == 3.0
        ,   zbot-service-roll         == 3.0
        ,   zbot-service-uptime       == 3.0

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
