name:            zbot-example
version:         3.0
license:         MIT
license-file:    ../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        A dice rolling service for Zbot.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

Executable zbot3
    Main-Is:        Main.hs

    build-depends:
            base                      >= 4.3      && < 5
        ,   zbot-core
        ,   zbot-cli
        ,   zbot-service-define
        ,   zbot-service-describe
        ,   zbot-service-grep
        ,   zbot-service-history
        ,   zbot-service-history
        ,   zbot-service-lists
        ,   zbot-service-ngram
        ,   zbot-service-op
        ,   zbot-service-replace
        ,   zbot-service-reputation
        ,   zbot-service-roll
        ,   zbot-service-seen
        ,   zbot-service-uptime

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
