name:            zbot-extras
version:         3.0
license:         MIT
license-file:    ../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        Extra utilities for creating Zbot based IRC bots.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            base                      >= 4.3      && < 5
        ,   mtl                       >= 2.1
        ,   text                      >= 1.2
        ,   zbot-core                 == 3.0

    exposed-modules:
            Zbot.Extras.Command
        ,   Zbot.Extras.UnitService

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
