name:            zbot-extras
version:         3.0
license:         MIT
license-file:    ../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        Extra utilities for creating Zbot based IRC bots.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            base                      >= 4.3      && < 5
        ,   curl                      >= 1.3
        ,   download-curl             >= 0.1.4
        ,   mtl                       >= 2.1
        ,   regex-base                >= 0.93
        ,   regex-tdfa                >= 1.2
        ,   regex-tdfa-text           >= 1.0.0.2
        ,   scalpel                   >= 0.1.1
        ,   tagsoup                   >= 0.12
        ,   text                      >= 1.2
        ,   time                      >= 1.4.0
        ,   zbot-core                 == 3.0

    exposed-modules:
            Zbot.Extras.Command
        ,   Zbot.Extras.Message
        ,   Zbot.Extras.Regex
        ,   Zbot.Extras.Scrape
        ,   Zbot.Extras.Time
        ,   Zbot.Extras.UnitService

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
