name:            zbot-service-describe
version:         3.0
license:         MIT
license-file:    ../../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        A service that will print descriptions of links.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            aeson                     >= 0.6
        ,   base                      >= 4.3      && < 5
        ,   bytestring                >= 0.10
        ,   curl                      >= 1.3
        ,   download-curl             >= 0.1.4
        ,   mtl                       >= 2.1
        ,   scalpel                   >= 0.1.1
        ,   tagsoup                   >= 0.12
        ,   text                      >= 1.2
        ,   transformers              >= 0.3
        ,   zbot-core                 == 3.0
        ,   zbot-extras               == 3.0

    exposed-modules:
            Zbot.Service.Describe
        ,   Zbot.Service.Describe.Default
        ,   Zbot.Service.Describe.Onion
        ,   Zbot.Service.Describe.Spotify
        ,   Zbot.Service.Describe.Twitter
        ,   Zbot.Service.Describe.YouTube

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010

