name:            zbot-service-grep
version:         3.0
license:         MIT
license-file:    ../../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        A service that lets users grep through IRC logs.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            base                      >= 4.3      && < 5
        ,   mtl                       >= 2.1
        ,   text                      >= 1.2
        ,   regex-tdfa                >= 1.2
        ,   regex-tdfa-text           >= 1.0.0.2
        ,   transformers              >= 0.3
        ,   zbot-core                 == 3.0
        ,   zbot-extras               == 3.0
        ,   zbot-service-history      == 3.0

    exposed-modules:
            Zbot.Service.Grep

    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
