name:            zbot-service-ngram
version:         3.0
license:         MIT
license-file:    ../../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankley <number.dot.10@gmail.com>
synopsis:        A service that will generate sentences based on gram models.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            base                      >= 4.3      && < 5
        ,   containers                >= 0.5.0.0
        ,   mtl                       >= 2.1
        ,   text                      >= 1.2
        ,   transformers              >= 0.3
        ,   random-fu
        ,   unordered-containers      >= 0.2.5.1
        ,   zbot-core                 == 3.0
        ,   zbot-extras               == 3.0
        ,   zbot-service-history      == 3.0

    exposed-modules:
            Zbot.Service.NGram
            Zbot.Service.NGram.Model

--    ghc-options: -W -Werror

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010

