name:            zbot-service-roll
version:         3.0
license:         MIT
license-file:    ../../LICENSE
author:          Will Coster <willcoster@gmail.com>, Jesse Frankely <number.dot.10@gmail.com>
maintainer:      Will Coster <willcoster@gmail.com>, Jesse Frankely <number.dot.10@gmail.com>
synopsis:        A dice rolling service for ZBot.
description:     See README.md
category:        IRC
cabal-version:   >= 1.10
build-type:      Simple

library
    build-depends:
            base                      >= 4.3      && < 5
        ,   mtl                       >= 2.1
        ,   random                    >= 1.0
        ,   text                      >= 0.11
        ,   zbot-core                 == 3.0

    exposed-modules:
            Zbot.Service.Roll

    ghc-options: -W -Werror -O2

    default-extensions:
        OverloadedStrings

    default-language:    Haskell2010
